--- a/css/nav.css
+++ b/css/nav.css
@@ -74,13 +74,16 @@
         display: none;
     }
 
+    .horizontal_menu {
+        display: none;
+    }
+
     #phone_menu {
         display: none;
     }
 
     .label {
         cursor: pointer;
-        background: rgba(0, 0, 0, 0.3);
     }
 
     .menu_phone {
@@ -107,14 +110,49 @@
         transition: all 0.4s;
     }
 
-    #phone_menu:checked ~ .phone_menu_list {
+    #phone_menu:checked ~.phone_menu_list {
         margin: 0;
         background: whitesmoke;
     }
 }
 
-@media screen and (max-width:500px){
+@media screen and (max-width:500px) {
     .phone_menu-icon {
-        font-size:30px;
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-height:700px) {
+    .menu_link {
+        flex-direction: column;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .horizontal_menu{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 20px;
+        padding: 0 10px;
+        margin-left: 15px;
+    }
+
+    .horizontal_menu_top{
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+    }
+    .horizontal_menu_bottom{
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+    }
+
+    .link_span{
+        display: none;
     }
 }
